--- a/assets/css/src/board.css
+++ b/assets/css/src/board.css
@@ -1,6 +1,10 @@
 /* board filters */
 .board-filters {
     font-size: 0.95em;
+    position: fixed;
+    left: 10px;
+    right: 10px;
+    z-index: -1;
 }
 
 #more-filters {
@@ -20,27 +24,25 @@
 
 /* board table */
 #board-container {
+    padding-top: 20px;
     padding-bottom: 180px; /* Space to avoid dropdown menu truncated */
 }
 
-/* Board container classes for wide/compact view */
-.board-container-wide {
-    overflow-x: scroll;
+#board {
+    table-layout: fixed;
+    background-color: white;
 }
 
-.board-container-compact {
-    overflow-x: hidden;
+#board th {
+    width: 120px; /* Width of swimlane column */
 }
 
-/* Board table column for wide/compact view */
-.board-column-wide {
-    min-width: 240px;
-    max-width: 240px;
+#board th.board-column {
+    width: 240px; /* Width of other columns, in default [horizontal scrolling] view mode */
 }
 
-.board-column-compact {
-    min-width: 0px;
-    max-width: 0px;
+#board th.board-column.board-column-compact {
+    width: initial; /* Do not force the width of the columns in compact view mode */
 }
 
 #board th a {
